Fix banner margin on mobile

--- a/public/css/guarda.css
+++ b/public/css/guarda.css
@@ -6,7 +6,7 @@
 @media (max-width: 1000px) {
  	#banner {
 	 position: static !important ;
-   margin-top: 30px !important ;
+   margin-top: 320px !important ;
  	};
 
  	#wrap {
